--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,63 @@
+/* Fonts */
+@font-face {
+  font-display: swap;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/roboto-v30-latin-regular.eot');
+  src: url('../fonts/roboto-v30-latin-regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v30-latin-regular.woff2') format('woff2'),
+    url('../fonts/roboto-v30-latin-regular.woff') format('woff'),
+    url('../fonts/roboto-v30-latin-regular.ttf') format('truetype'),
+    url('../fonts/roboto-v30-latin-regular.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  src: url('../fonts/roboto-v30-latin-500.eot');
+  src: url('../fonts/roboto-v30-latin-500.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v30-latin-500.woff2') format('woff2'),
+    url('../fonts/roboto-v30-latin-500.woff') format('woff'),
+    url('../fonts/roboto-v30-latin-500.ttf') format('truetype'),
+    url('../fonts/roboto-v30-latin-500.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/roboto-v30-latin-700.eot');
+  src: url('../fonts/roboto-v30-latin-700.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v30-latin-700.woff2') format('woff2'),
+    url('../fonts/roboto-v30-latin-700.woff') format('woff'),
+    url('../fonts/roboto-v30-latin-700.ttf') format('truetype'),
+    url('../fonts/roboto-v30-latin-700.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Play';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/play-v19-latin-700.eot');
+  src: url('../fonts/play-v19-latin-700.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/play-v19-latin-700.woff2') format('woff2'),
+    url('../fonts/play-v19-latin-700.woff') format('woff'),
+    url('../fonts/play-v19-latin-700.ttf') format('truetype'),
+    url('../fonts/play-v19-latin-700.svg#Play') format('svg');
+}
+
+
 /* Global */
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
-
-body {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.5;
 }
 
 ul {
@@ -22,4 +70,147 @@ address {
 
 a {
   text-decoration: none;
+}
+
+/* Variables */
+
+:root {
+  --primary-color: #011C44;
+  --brand-color: #2B7FFF;
+  --black-color: #000;
+  --white-color: #FFF;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.2;
+  color: var(--primary-color);
+}
+
+.button {
+  color: var(--white-color);
+  font-size: 18px;
+  font-weight: 600;
+  background-color: var(--brand-color);
+  cursor: pointer;
+  border: 2px solid var(--brand-color);
+  border-radius: 32px;
+  padding: 16px 32px;
+
+}
+
+.button:hover {
+  color: var(--primary-color);
+  background-color: transparent;
+
+}
+
+.title {
+  font-family: 'Play', sans-serif;
+  font-weight: 700;
+  line-height: 1.2;
+  font-size: 64px;
+}
+
+.accent {
+  color: var(--brand-color);
+}
+
+/* Header */
+
+.menu__list-link {
+  line-height: 1.2;
+  color: var(--primary-color);
+}
+
+.menu__list-link:hover {
+  font-weight: 700;
+  color: var(--brand-color);
+}
+
+/* Hero */
+
+.hero__title {
+  font-size: 140px;
+  color: var(--brand-color);
+  text-align: center;
+}
+
+.hero__desc {
+  color: #4A4A4A;
+  line-height: 1.5;
+}
+
+/* About */
+
+.about__text {
+  font-size: 22px;
+  line-height: 1.7;
+}
+
+/* Why We */
+
+.whywe__item-text {
+  color: var(--black-color);
+  line-height: 1.3;
+}
+
+/* Procedures */
+
+.procedures__item-text {
+  color: var(--white-color);
+}
+
+
+/* Contacts */
+
+.form {
+  background-color: var(--primary-color);
+}
+
+.form__title {
+  font-size: 22px;
+  color: var(--white-color);
+}
+
+.form__confidensy {
+  font-size: 12px;
+  line-height: 1.5;
+  color: #747272;
+}
+
+.form__confidensy-link {
+  color: #747272;
+  text-decoration: underline;
+}
+
+
+/* Footer */
+
+.footer {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+}
+
+.footer__menu-link {
+  color: var(--white-color);
+}
+
+.footer__menu-link:hover,
+.adress__link:hover {
+  color: var(--brand-color);
+  font-weight: 700;
+}
+
+.adress__link {
+  font-size: 16px;
+  color: var(--white-color);
+}
+
+.adress__copyright {
+  font-size: 13px;
+  line-height: 1.1;
+  color: #747272;
 }
