change contacts button hover styles

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,16 @@
   box-sizing: border-box;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
 ul {
   list-style-type: none;
 }
@@ -89,6 +99,17 @@ body {
   color: var(--primary-color);
 }
 
+.section {
+  padding-bottom: 96px;
+}
+
+.container {
+  max-width: 1264px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 12px;
+}
+
 .button {
   color: var(--white-color);
   font-size: 18px;
@@ -98,13 +119,13 @@ body {
   border: 2px solid var(--brand-color);
   border-radius: 32px;
   padding: 16px 32px;
+  margin-bottom: 14px;
 
 }
 
 .button:hover {
   color: var(--primary-color);
   background-color: transparent;
-
 }
 
 .title {
@@ -112,6 +133,7 @@ body {
   font-weight: 700;
   line-height: 1.2;
   font-size: 64px;
+  margin-bottom: 48px;
 }
 
 .accent {
@@ -132,10 +154,19 @@ body {
 
 /* Hero */
 
+.hero {
+  padding: 16px 0 127px;
+}
+
 .hero__title {
   font-size: 140px;
   color: var(--brand-color);
   text-align: center;
+  margin-bottom: 40px;
+}
+
+.hero__text {
+  margin-bottom: 16px;
 }
 
 .hero__desc {
@@ -145,12 +176,25 @@ body {
 
 /* About */
 
+
+.about__title {
+  margin-bottom: 40px;
+}
+
 .about__text {
   font-size: 22px;
   line-height: 1.7;
 }
 
+.about__text p:first-child {
+  margin-bottom: 40px;
+}
+
 /* Why We */
+
+.whywe {
+  padding-top: 176px;
+}
 
 .whywe__item-text {
   color: var(--black-color);
@@ -158,6 +202,8 @@ body {
 }
 
 /* Procedures */
+
+
 
 .procedures__item-text {
   color: var(--white-color);
@@ -168,11 +214,13 @@ body {
 
 .form {
   background-color: var(--primary-color);
+  padding: 48px 56px;
 }
 
 .form__title {
   font-size: 22px;
   color: var(--white-color);
+  margin-bottom: 32px;
 }
 
 .form__confidensy {
@@ -186,12 +234,21 @@ body {
   text-decoration: underline;
 }
 
+.contacts__button {
+  margin-bottom: 8px;
+}
+
+.contacts__button:hover {
+  background-color: var(--white-color);
+}
+
 
 /* Footer */
 
 .footer {
   background-color: var(--primary-color);
   color: var(--white-color);
+  padding: 56px 0;
 }
 
 .footer__menu-link {
