--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,7 +1,11 @@
 :root {
-  --primary-color: #011C44;
-  --brand-color: #2B7FFF;
-  --black-color: #000;
-  --white-color: #FFF;
-  --gray-color: #747272;
+	--primary-color: #011C44;
+	--brand-color: #2B7FFF;
+	--black-color: #000;
+	--white-color: #FFF;
+	--gray-color: #747272;
 }
+
+$bp-mobile: 480px;
+$bp-tablet: 760px;
+$bp-desktop: 1200px;
