--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,17 +1,18 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.2;
-  color: var(--primary-color);
-  margin: 0;
-  padding: 0;
+	font-family: 'Roboto', sans-serif;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 1.2;
+	color: var(--primary-color);
+	margin: 0;
+	padding: 0;
+	position: relative;
 }
 
 h1,
@@ -21,20 +22,20 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
+	margin-top: 0;
 }
 
 ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
 }
 
 address {
-  font-style: normal;
+	font-style: normal;
 }
 
 a {
-  display: inline-block;
-  text-decoration: none;
+	display: inline-block;
+	text-decoration: none;
 }
