--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,82 +1,68 @@
 .button {
-  color: var(--white-color);
-  font-size: 18px;
-  font-weight: 600;
-  background-color: var(--brand-color);
-  cursor: pointer;
-  border: 2px solid var(--brand-color);
-  border-radius: 32px;
-  padding: 16px 32px;
-  margin-bottom: 14px;
-  transition: color .2s, background-color .2s;
+	display: block;
+	color: var(--white-color);
+	font-size: 16px;
+	font-weight: 600;
+	background-color: var(--brand-color);
+	cursor: pointer;
+	border: 2px solid var(--brand-color);
+	border-radius: 32px;
+	padding: 12.5px 24px;
+	margin: 0 auto;
+	transition: color .2s, background-color .2s;
+
+	@media screen and (min-width: $bp-tablet) {
+		padding: 16px 32px;
+		margin: 0;
+		font-size: 18px;
+	}
+
+	@media screen and (min-width: $bp-desktop) {
+		margin: 0;
+	}
 }
 
 .button:hover {
-  color: var(--primary-color);
-  background-color: transparent;
+	color: var(--primary-color);
+	background-color: transparent;
 }
 
 .button:disabled {
-  color: gray;
-  background-color: lightgray;
-  border-color: currentColor;
-  cursor: not-allowed;
+	color: gray;
+	background-color: lightgray;
+	border-color: currentColor;
+	cursor: not-allowed;
 }
 
 
-// slider
-.carousel-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid var(--primary-color);
-  background-color: transparent;
-  width: 44px;
-  height: 44px;
-  padding: 0;
-  margin: 0;
-  border-radius: 50%;
-  cursor: pointer;
-  fill: var(--primary-color);
-  transition: background-color .2s, border-color .2s, fill .2s;
-}
 
-.carousel-button:hover {
-  border-color: var(--white-color);
-  background-color: var(--brand-color);
-  fill: var(--white-color);
-}
-
-.carousel-button.carousel-button-next {
-  transform: rotate(180deg);
-}
 
 
 // contacts
 .contacts__button {
-  margin-bottom: 8px;
+	margin-bottom: 8px;
 }
 
 .contacts__button:hover {
-  background-color: var(--white-color);
+	background-color: var(--white-color);
 }
 
 .contacts__button[disabled]:hover {
-  background-color: lightgray;
+	background-color: lightgray;
 }
 
 // modal 
 
 .modal-btn-close {
-  position: absolute;
-  top: 42px;
-  right: 42px;
-  background-image: url('../images/modal-close.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: transparent;
-  width: 32px;
-  height: 32px;
-  border: none;
-  cursor: pointer;
+	position: absolute;
+	top: 42px;
+	right: 42px;
+	background-image: url('../images/modal-close.svg');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-color: transparent;
+	width: 32px;
+	height: 32px;
+	border: none;
+	cursor: pointer;
 }
