--- a/scss/layouts/_contacts-section.scss
+++ b/scss/layouts/_contacts-section.scss
@@ -55,7 +55,7 @@
 	}
 
 	&__button {
-		margin-bottom: 8px;
+		margin: 0 auto 8px;
 
 		&:hover {
 			background-color: var(--white-color);
@@ -65,5 +65,6 @@
 			background-color: lightgray;
 		}
 	}
+
 
 }
