--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -24,6 +24,20 @@
 		padding: 42px 144px;
 	}
 
+	&-btn-close {
+		position: absolute;
+		top: 42px;
+		right: 42px;
+		background-image: url('../images/modal-close.svg');
+		background-repeat: no-repeat;
+		background-position: center;
+		background-color: transparent;
+		width: 32px;
+		height: 32px;
+		border: none;
+		cursor: pointer;
+	}
+
 	&__title {
 		color: var(--white-color);
 		max-width: 435px;
